--- a/index.html
+++ b/index.html
@@ -4,43 +4,39 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>be better, make progress, succes</title>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>BE BETTER, MAKE PROGRESS,SUCCED
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<img src="img/https://thumbs.dreamstime.com/b/vibrant-cosmic-energy-flow-particles-illuminate-space-forming-dynamic-orange-blue-hues-396705811.jpg">
+				<h1>BE BETTER, MAKE PROGRESS,SUCCED</h1>
+				<img src="https://thumbs.dreamstime.com/b/vibrant-cosmic-energy-flow-particles-illuminate-space-forming-dynamic-orange-blue-hues-396705811.jpg">
 
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-3">
-				<img src="img/https://img.picturequotes.com/2/399/398189/you-can-always-become-better-quote-1.jpg">
-
-			
+			<div class="col-md-4">
+				<img class="yo" src="https://img.picturequotes.com/2/399/398189/you-can-always-become-better-quote-1.jpg">
 			</div>
-			<div class="col-md-6">
-				<p>Every day is about life.</p><p1>TO BECOME THE BEST VERSION OF YOUR SELF.</p1>
-					 <p>To become better version of your self you have to take decisions, succeed, fail but keep trying to achive your goals no matter what.The universe/space is like life everything is moving by a certain flow.In addition, you have to give space to your self to rest restart and be more productive every day. Additionally, the powerfull key of this is desipline , balancing your personal life with your work and your future.In conclusion, this are the keys for success. For example , is like runing a marathon with no proper training. LIFE IS A MARATHON What you are dealing every day.Life is about TODAY, not tommorow, not yesterday. Yesterday is past, a place that you are learning from your mistakes.Tommorowm is about future , disisions and fate . BUT TODAY is about now, choose a road, regrete but still everything can be fixed,</p>
-					 <p1>THERE IS ALWAYS ANOTHER ROAD TO SUCCESS.</p1> 
-					 <p>If you train properly every single day you will succed like a maraton.</p>
-					 <p1>LIFE IS AN EVERY SINGLE DAY MARATHON.</p1>
-				</p>
-
+			<div class="col-md-4">
+				<p>Every day is about life.</p>
+				<p class="yeah">TO BECOME THE BEST VERSION OF YOUR SELF.</p>
+				<p>To become better version of your self you have to take decisions, succeed, fail but keep trying to achive your goals no matter what.The universe/space is like life everything is moving by a certain flow.In addition, you have to give space to your self to rest restart and be more productive every day. Additionally, the powerfull key of this is desipline , balancing your personal life with your work and your future.In conclusion, this are the keys for success. For example , is like runing a marathon with no proper training. LIFE IS A MARATHON What you are dealing every day.Life is about TODAY, not tommorow, not yesterday. Yesterday is past, a place that you are learning from your mistakes.Tommorowm is about future , disisions and fate . BUT TODAY is about now, choose a road, regrete but still everything can be fixed,</p>
+				<p class="yeah">THERE IS ALWAYS ANOTHER ROAD TO SUCCESS.</p> 
+				<p>If you train properly every single day you will succed like a maraton.</p>
+				<p class="yeah">LIFE IS AN EVERY SINGLE DAY MARATHON.</p>
 			</div>
-			<div class="col-md-3">
-				<img src="img/https://thumbs.dreamstime.com/b/grouped-set-strichmen-sprechblase-questionmarks-schilderwald-worked-modern-illustration-grouped-set-strichmen-397572310.jpg">
-			
+			<div class="col-md-4">
+				<img class="yo" src="https://thumbs.dreamstime.com/b/grouped-set-strichmen-sprechblase-questionmarks-schilderwald-worked-modern-illustration-grouped-set-strichmen-397572310.jpg">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/09GsaQCKIdI?si=nwm4QDSUQKfI_fh7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/09GsaQCKIdI?si=nwm4QDSUQKfI_fh7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 			</div>
 			<div class="col-md-6">
