--- a/index.html
+++ b/index.html
@@ -11,36 +11,38 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row">
+		<div class="row myrow backgroundphoto">
 			<div class="col-md-12">
+				<br><br><br><br><br>
 				<h1>BE BETTER, MAKE PROGRESS,SUCCED</h1>
-				<img src="https://thumbs.dreamstime.com/b/vibrant-cosmic-energy-flow-particles-illuminate-space-forming-dynamic-orange-blue-hues-396705811.jpg">
-
+				<br><br><br><br><br>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
+		<div class="row hehehh">
+			<div class="col-xs-12 col-md-4">
+				<br><br><br>
 				<img class="yo" src="https://img.picturequotes.com/2/399/398189/you-can-always-become-better-quote-1.jpg">
 			</div>
-			<div class="col-md-4">
-				<p>Every day is about life.</p>
-				<p class="yeah">TO BECOME THE BEST VERSION OF YOUR SELF.</p>
+			<div class="col-xs-12 col-md-4">
+				<p>Every day is an opportunity to...</p>
+				<h4 class="yeah">BECOME THE BEST VERSION OF YOUR SELF.</h4>
 				<p>To become better version of your self you have to take decisions, succeed, fail but keep trying to achive your goals no matter what.The universe/space is like life everything is moving by a certain flow.In addition, you have to give space to your self to rest restart and be more productive every day. Additionally, the powerfull key of this is desipline , balancing your personal life with your work and your future.In conclusion, this are the keys for success. For example , is like runing a marathon with no proper training. LIFE IS A MARATHON What you are dealing every day.Life is about TODAY, not tommorow, not yesterday. Yesterday is past, a place that you are learning from your mistakes.Tommorowm is about future , disisions and fate . BUT TODAY is about now, choose a road, regrete but still everything can be fixed,</p>
-				<p class="yeah">THERE IS ALWAYS ANOTHER ROAD TO SUCCESS.</p> 
-				<p>If you train properly every single day you will succed like a maraton.</p>
+				<p class="yeah">THERE IS ALWAYS ANOTHER ROAD TO SUCCESS.</p> <p>If you train properly every single day you will succed like a maraton.</p>
 				<p class="yeah">LIFE IS AN EVERY SINGLE DAY MARATHON.</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-xs-12 col-md-4">
+				<br><br><br>
 				<img class="yo" src="https://thumbs.dreamstime.com/b/grouped-set-strichmen-sprechblase-questionmarks-schilderwald-worked-modern-illustration-grouped-set-strichmen-397572310.jpg">
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-6">
+		<div class="row hehehh2">
+			<div class="col-xs-12 col-md-6">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/09GsaQCKIdI?si=nwm4QDSUQKfI_fh7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 			</div>
-			<div class="col-md-6">
-				<ul>To become better you have to:
+			<div class="col-xs-12 col-md-6">
+				<ul>
+					<h4>To become better you have to:</h4>
 					<li> beDISIPLINE</li>
 					<li>beMOTIVATED</li>
 					<li>beORGANISED</li>
